# nexus-mail

./: .gitignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
docs/: architecture.md  detailed_backlog.md  features_audit.md  prd.md  testing_gaps_analysis.md  testing_standard.md  testing_standard_v2.md
docs/03-dev-plan/: 00-overview.md  01-backend-mod-01.md  02-frontend-mod-01.md  03-integration-mod-01.md  04-backend-mod-02.md  05-frontend-mod-02.md  06-integration-mod-02.md  07-backend-mod-03.md  08-frontend-mod-03.md  09-integration-mod-03.md  10-backend-mod-04.md  11-frontend-mod-04.md  13-backend-mod-05.md  (+6 more)
e2e/: actions.spec.ts  attachments_deep.spec.ts  compose.spec.ts  compose_attachments.spec.ts  drag_move.spec.ts  first_launch.spec.ts  folder_management.spec.ts  interactions.spec.ts  mail_detail.spec.ts  multi_account_persistence.spec.ts  navigation.spec.ts  search.spec.ts  security.spec.ts  selection_toolbar.spec.ts  settings_shortcuts.spec.ts  sync_feedback.spec.ts  sync_folder_integration.spec.ts  ux_enhanced.spec.ts  visual.spec.ts
playwright-report/: index.html
scripts/: dev-mock.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: database.rs  imap_client.rs  logger.rs  mock_client.rs  mod.rs  security.rs  smart_inbox.rs  smtp_client.rs  sync_engine.rs  test_servers.rs  traits.rs  unified_inbox.rs
src-tauri/tests/: verification_scaffold.rs
test-results/: .last-run.json
(+527 files in other folders)
