[package]
name = "nexus-mail"
version = "0.1.0"
description = "Nexu Mail - Modern Desktop Email Client"
authors = ["jin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nexus_mail_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
imap = "2.4"
lettre = "0.11"
native-tls = "0.2"
anyhow = "1.0"
async-trait = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2"
mailparse = "0.15"
once_cell = "1.19"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
rand = "0.10.0"
sha2 = "0.10.9"
chacha20poly1305 = "0.10.1"
base64 = "0.21.0"
whoami = "2.1.1"
dirs = "6.0.0"
hmac = "0.12.1"
md5 = "0.8.0"
imap-proto = "0.10.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
utf7-imap = "0.3.2"
encoding_rs = "0.8.35"

[dev-dependencies]
mockall = "0.13"
tempfile = "3"
